--- a/app/src/main/res/values/lsposed_config.xml
+++ b/app/src/main/res/values/lsposed_config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="lsposed_scope" >
+    <string-array name="xposedscope" >
         <item>com.microsoft.office.excel</item>
         <item>com.microsoft.office.word</item>
         <item>com.microsoft.office.powerpoint</item>
